# djsentoo

./: .gitignore  README.md  pyproject.toml
demo/demo/: settings.py
src/djsentoo/: admin.py  apps.py  config.py  forms.py  models.py  service.py  signals.py  urls.py  views.py  wrapper.py
src/djsentoo/migrations/: 0001_initial.py  0002_alter_transaction_currency.py  0003_alter_transaction_currency.py  0004_alter_transaction_currency_alter_transaction_status.py
