[project]
name = "djsentoo"
readme = "README.md"
dynamic = ["version"]
description = "A reusable Django app for integrating with the Sentoo payment gateway."
authors = [
    { name = "Lemi Boyce", email = "lemuel@vokality.com" }
]
license = "MIT"
homepage = "https://github.com/rhymiz/djsentoo"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "sentoo>=0.1.8",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Django :: 5",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
keywords = ["sentoo", "payments", "django"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

